# AM32

./: CMakeLists.txt  all.txt  dump.sh  find_release_skip.py  pr.md
.github/workflows/: CICD_build.yml  ci.yml  release.yml
cmake/: manage_tools.cmake
cmake/modules/: TargetFactory.cmake  TargetUtils.cmake
